--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
