--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ PORT = 3005
 DATABASE_CLOUD = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/TodoList?retryWrites=true&w=majority
 DATABASE_COMPASS = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/TodoList
 DATABASE_PASSWORD=rikku0305
+JWT_EXPIRES_DAY = 7d
+JWT_SECERT= wewdff3gg
