✨ feat(students): 新增JWT權限

--- a/config.env
+++ b/config.env
@@ -3,4 +3,4 @@ DATABASE_CLOUD = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/T
 DATABASE_COMPASS = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/TodoList
 DATABASE_PASSWORD=rikku0305
 JWT_EXPIRES_DAY = 7d
-JWT_SECERT= wewdff3gg
+JWT_SECRET= wewdff3gg
