🐞 fix(students): 修改 cookies

--- a/config.env
+++ b/config.env
@@ -4,3 +4,4 @@ DATABASE_COMPASS = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net
 DATABASE_PASSWORD=rikku0305
 JWT_EXPIRES_DAY = 7d
 JWT_SECRET= wewdff3gg
+COOKIE_SECRET= awdqse
