--- a/config.env
+++ b/config.env
@@ -2,6 +2,7 @@ PORT = 3005
 DATABASE_CLOUD = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/TodoList?retryWrites=true&w=majority
 DATABASE_COMPASS = mongodb+srv://rikkubook:<password>@cluster0.a15er.mongodb.net/TodoList
 DATABASE_PASSWORD=rikku0305
-JWT_EXPIRES_DAY = 7d
-JWT_SECRET= wewdff3gg
-COOKIE_SECRET= awdqse
+# JWT_EXPIRES_DAY = 7d
+# JWT_SECRET= wewdff3gg
+SESSION_SECRET= awdqse
+SESSION_EXPIRES_DAY= 3600000
